PROJECT(httpdb)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
#ADD_DEFINITIONS( -fno-inline -O0 -g -Wstrict-prototypes -std=gnu99 -Wall)
ADD_DEFINITIONS( -Os -Wstrict-prototypes -std=gnu99 -Wall)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(OPENSSL_LIBRARIES CACHE PATH "Path to the openssl library")
set(OPENSSL_INCLUDE_DIRS CACHE PATH "Path to the openssl include directory")

#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

if ("${OPENSSL_INCLUDE_DIRS}" STREQUAL "")
set(OPENSSL_LIBRARIES ssl crypto)
endif()

ADD_DEFINITIONS( -DMG_ENABLE_SSL )

INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/include)
FILE(GLOB_RECURSE HTTPDB_SRC ${PROJECT_SOURCE_DIR}/src/*.c)

ADD_EXECUTABLE(httpdb ${HTTPDB_SRC})
TARGET_LINK_LIBRARIES(httpdb m ${OPENSSL_LIBRARIES})
